--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server-watchdog-nodejs",
+  "name": "@randlabs/server-watchdog-nodejs",
   "version": "1.0.0",
   "description": "NodeJS library for the Server monitoring tool",
   "main": "index.js",
